fix(docs): ops docs accuracy — env vars, docker run examples, image defaults
5 fixes across operations documentation:

1. docker-compose.yml comments: health URL /actuator/health → /api/health
   (user-facing endpoint); IMAGE_NAME default path corrected to
   cortex-ce/cortex-ce:main matching actual line 44.

2. DOCKER_README.md: Optional Variables table expanded from 4 to 17 vars
   — added IMAGE_NAME, SPRING_PROFILES_ACTIVE,
   SPRING_AI_OPENAI_EMBEDDING_DIMENSIONS, CLAUDE_MEM_MODE,
   CLAUDEMEM_LLM_PROVIDER, MEMORY_REFINE_ENABLED, JAVA_OPTS,
   SERVER_PORT, POSTGRES_PORT (all defined in docker-compose.yml).

3. DOCKER_README.md + docs/DEPLOYMENT.md docker run examples: added
   required SPRING_AI_OPENAI_EMBEDDING_API_KEY (listed as required in
   both docs but missing from examples).

4. .env.example: added Anthropic configuration section (commented out)
   matching .env.docker template.

5. docs/DEPLOYMENT-zh-CN.md: updated last-modified date 2026-03-13 →
   2026-04-02.